--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                     <label>Password
                         <input name="password" type="password" class="text"
                                 data-parsley-trim-value="true"
-                                data-parsley-remote="/backend/validator/password"
+                                data-parsley-remote="/backend/v1.0.0/validator/password"
                                 data-parsley-remote-message="Invalid pass."
                                 data-parsley-remote-options='{ "type": "POST", "data": {"csrfmiddlewaretoken":"{{csrf_token}}"} }'
                                 required
